k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinywaffen
  labels:
    app: tinywaffen
spec:
  selector:
    app: tinywaffen
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  - name: admin
    port: 2019
    targetPort: 2019
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: tinywaffen-admin
  labels:
    app: tinywaffen
    service: admin
spec:
  selector:
    app: tinywaffen
  ports:
  - name: admin
    port: 2019
    targetPort: 2019
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: tinywaffen-metrics
  labels:
    app: tinywaffen
    service: metrics
spec:
  selector:
    app: tinywaffen
  ports:
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  type: ClusterIP
